# advent_of_code_2025

./: .clang-format  CMakeLists.txt  README.md
scripts/: build.sh  quick_build.sh
src/: day1.cpp  day1.h  day2.cpp  main.cpp
